syntax = "proto3";

package kr.jclab.grpcover.v1;

option java_multiple_files = false;
option java_package = "kr.jclab.grpcover.core.protocol.v1";
option java_outer_classname = "GofProto";

import "google/rpc/status.proto";

enum FrameType {
    RESERVED = 0;
    HEADER = 1;
    DATA = 2;
    PING = 3;
    PONG = 4;
    GO_AWAY = 5;
    RST = 6;
}

enum FrameFlags {
    NONE = 0;

    // used in HEADER, DATA
    END_STREAM = 1;
}

message Header {
    google.rpc.Status status = 1;
    repeated bytes metadata = 2;
    string authority = 10;
    string method = 11;
    bytes additional_data = 21;
}

message Frame {
    FrameType type = 1;
    int32 stream_id = 2;
    repeated FrameFlags flag = 3;

    Header header = 10;

    int64 ping_data = 20;

    // for rst or go_away
    int64 error_code = 30;

    bytes data = 40;
}
